Fixed play button alignment

--- a/client/app/views/mixes/mixes.less
+++ b/client/app/views/mixes/mixes.less
@@ -1,16 +1,3 @@
-.widget-image-container {
-  width: 74px;
-  height: 74px;
-  margin: -20px -50px;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  cursor: pointer;
-}
-
 .widget-advanced .widget-image-container {
   position: absolute;
   display: inline-block;
@@ -119,7 +106,23 @@
 .image-container {
   height: 142px;
   //background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
   background-repeat: no-repeat;
   background-position: right center;
   background-attachment: scroll;
+  background-size: cover;
 }
+.widget-image-container {
+  width: 74px;
+  height: 74px;
+  position: absolute!important;
+  top: 50%;
+  left: 65%;
+  transform: translate(-50%,-50%);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  cursor: pointer;
+}
+
